# numpy_tree

./: .gitignore  README.md  pyproject.toml
src/numpy_tree_detroix23/: __init__.py  __main__.py
src/numpy_tree_detroix23/base/: exemples.py  iterables.py  tree.py
src/tree_py/: __main__.py  tree.py
src/tree_py/base/: exemples.py  tree.py
